--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Mediterranean restaurant,
+      focused on traditional
+      recipes served with a modern
+      TWIST"
     />
+    <meta property="og:title" content="Little Lemon"/>
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Mediterranean restaurant,
+    focused on traditional
+    recipes served with a modern
+    TWIST"/>
+    <meta property="og:image" content="./src/assests/icons_assets/Logo.svg"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
